--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Quiz</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Code Quiz</title>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-  <body></body>
+    <body>
+        <header class="p-3" style="background-color: rgb(231, 201, 31);">
+            <a href="highscore.html" class="ml-3">View high scores</a>
+            <span id="timer" class="float-right mr-3" style="color: black;"
+                >Time: 0</span
+            >
+        </header>
+
+        <!-- Welcome Page -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1>
+                        Code Quiz
+                    </h1>
+                    <p class="lead">
+                        Please be prepared to complete this quiz in 60 seconds.
+                        Don't worry! It is not hard at all.
+                    </p>
+                    <hr class="my-3 bg-dark" />
+                    <p>
+                        <em>Tip:</em> You will lose some time if you answer it
+                        incorrectly.
+                    </p>
+                    <button
+                        id="start-button"
+                        type="button"
+                        class="btn btn-info btn-lg"
+                    >
+                        Start
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"
+        ></script>
+        <script src="main.js"></script>
+    </body>
 </html>
