--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
 
         <!-- Added link to the jQuery Library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
