The layout of both homepage and scoreboard is completed

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h2>All done!</h2>
                     <p id="user-score"></p>
                     <form class="form-group">
-                        <label for="new-score">Enter your name: </label>
+                        <label for="userName">Enter your name: </label>
                         <input type="text" id="userName" />
                         <br />
                         <button id="submit" class="btn btn-info btn-lg my-3">
@@ -91,6 +91,6 @@
 
         <!-- Added link to the jQuery Library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
