--- a/scoreboard.html
+++ b/scoreboard.html
@@ -19,10 +19,12 @@
         </style>
     </head>
     <body>
-        <header
-            class="p-3"
-            style="background-color: rgb(231, 201, 31);"
-        ></header>
+        <header class="p-3" style="background-color: rgb(231, 201, 31);">
+            <a class="invisible" href="scoreboard.html">View highscores</a>
+            <span id="timer" class="float-right invisible" style="color: black;"
+                >Time: 0</span
+            >
+        </header>
 
         <section class="container">
             <div class="row d-flex justify-content center my-3 py-3">
@@ -40,6 +42,6 @@
         </section>
         <!-- Added link to the jQuery Library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
